# mmorpg

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  AGENTS.md  AUDIT.md  CLAUDE.md  CMakeLists.txt  Directory.Build.targets  Dockerfile  LICENSE  PROGRESS.md  README.md  _check_r3.py  _dump_all.py  _dump_xlsx.py  autogen.sh  chatgtp.txt  dev.bat  game.sln  logs_local_exe_all.bat  mmorpg.sln  question.txt  restart_local_exe_all.bat  start_local_exe_all.bat  status_local_exe_all.bat  stop_local_exe_all.bat  sync_submodule_branches.ps1  third_part.sh  third_party.sh  todo.txt  vcxproj2cmake.py
client/: CMakeLists.txt  client.cpp  client.sln  client.vcxproj  client.vcxproj.filters  go.mod  go.sum  main.cpp  main.go
client/client/: build.bat  go.mod  go.sum  main.go
client/client/logic/: player.go
client/client/muduo/: codec.go  tcp_client_test.go
client/client/pkg/: client.go
client/fairygui/qdao/: README.md  open_qdao.bat  open_qdao.ps1  publish_qdao.ps1  qdao.fairy
client/image/: wire_qdao_v3_assets.py
client/logic/: player.go
client/logic/handler/: createplayer.go  enterscenes2c.go  login.go  messagebody.go  sceneinfos2c.go  tips2c.go
client/pb/game/: actor_comp.pb.go  c2gate.pb.go  centre_common_server_player.pb.go  centre_player_scene.pb.go  centre_scene.pb.go  centre_scene_server_player.pb.go  centre_server_player_scene.pb.go  centre_service.pb.go  common.pb.go  common_message.pb.go  deploy_config.pb.go  game_player.pb.go  game_scene_server_player.pb.go  game_server_player.pb.go  game_server_player_scene.pb.go  game_service.pb.go  gs_node_comp.pb.go  item_comp.pb.go  message_id.go  mission_event.pb.go  player_ability.pb.go  player_async_comp.pb.go  player_login_comp.pb.go  player_network_comp.pb.go  scene.pb.go  scene_comp.pb.go  server_event.pb.go  team_client_player.pb.go  test_switch.pb.go  time_meter_comp.pb.go
client/pkg/: client.go
client/src/: client.cpp  client.h
client/src/client_entityid/: client_entityid.cpp  client_entityid.h
client/src/handler/: common_client_player_handler.h  login_service_handler.h  player_service.cpp  scene_client_player_handler.h  service.cpp  service.h  service_lua.cpp  team_client_player_handler.h
client/src/luacpp/: lua_client.cpp  lua_client.h  lua_module.cpp  lua_module.h
client/src/service/: service.cpp  service.h
client/tools/: gen_lantern_tab.py
controller_server/: CMakeLists.txt  controller_server.vcxproj  controller_server.vcxproj.filters  main.cpp
controller_server/src/: controller_server.cpp  controller_server.h
controller_server/src/comp/: account_player.h  player_list.cpp  player_list.h
controller_server/src/event_handler/: event_handler.cpp  event_handler.h  event_receiver.cpp  mission_event_handler.cpp  mission_event_handler.h  scene_event_handler.cpp  scene_event_handler.h
controller_server/src/event_receiver/: event_receiver.cpp  event_receiver.h  mission_event_receiver.cpp  mission_event_receiver.h  scene_event_receiver.cpp  scene_event_receiver.h
controller_server/src/handler/: clientplayercommonservice_handler.cpp  common_client_player_handler.cpp  common_client_player_handler.h  common_server_player_handler.cpp  common_server_player_handler.h  common_server_player_replied.h  controller2gsentergatesucceed_serverplayerloginservice_handler.cpp  controller2gsenterscenes2c_serverplayersceneservice_handler.cpp  controller2gslogin_serverplayerloginservice_handler.cpp  controller_common_server_player_handler.cpp  controller_common_server_player_handler.h  controller_scene_server_player_handler.cpp  controller_scene_server_player_handler.h  controller_service_handler.cpp  controller_service_handler.h  controllerservice_handler.cpp  deploy_service_replied.cpp  deploy_service_replied.h  enterscene_serverplayerteamservice_handler.cpp  enterscenecontroller2gs_serverplayersceneservice_handler.cpp  enterscenegs2controller_serverplayersceneservice_handler.cpp  game_service_replied.cpp  game_service_replied.h  gate_service_replied.cpp  gs2controllerleavesceneasyncsaveplayercomplete_serverplayersceneservice_handler.cpp  leavescenecontroller2gs_serverplayersceneservice_handler.cpp  lobby_scene_handler.h  lobby_service_replied.cpp  lobbyservice_handler.cpp  player_service.cpp  player_service.h  player_service_replied.cpp  player_service_replied.h  pushsceneinfos2c_clientplayersceneservice_handler.cpp  pushtipss2c_clientplayercommonservice_handler.cpp  register_handler.cpp  register_handler.h  scene_client_player_handler.cpp  scene_client_player_handler.h  scene_handler.cpp  (+17 more)
controller_server/src/network/: controller_rpc.h  game_node.h  gate_node.cpp  gate_node.h  gate_session.cpp  gate_session.h  gs_node.cpp  gs_node.h  login_node.cpp  login_node.h  message_system.cpp  message_system.h  player_session.h
controller_server/src/replied_handler/: common_client_player_handler.h  common_client_player_replied_handler.cpp  common_client_player_replied_handler.h  common_server_player_handler.h  common_server_player_replied_handler.cpp  common_server_player_replied_handler.h  controller_service_replied_handler.cpp  game_scene_replied_handler.h  (+33 more)
cpp/plugin/: CMakeList.txt  CMakeLists.txt  NoMemberRawPointerCheck.cpp  NoMemberRawPointerCheck.h  main.cpp  no_raw_ptr_matcher.cq
deploy_server/: CMakeLists.txt  deploy_server.cpp  deploy_server.h  deploy_server.vcxproj  deploy_server.vcxproj.filters  main.cpp
deploy_server/src/: deploy_server.cpp  deploy_server.h  deploy_variable.h
game_server/: CMakeLists.txt  game_server.vcxproj  game_server.vcxproj.filters  main.cpp
game_server/src/: game_server.cpp  game_server.h
gate_server/: CMakeLists.txt  gate_server.vcxproj  gate_server.vcxproj.filters  main.cpp
gate_server/src/: gate_server.cpp  gate_server.h
lobby_server/: CMakeLists.txt  lobby_server.sln  lobby_server.vcxproj  lobby_server.vcxproj.filters  main.cpp
lobby_server/src/: lobby_server.cpp  lobby_server.h
login_server/: CMakeLists.txt  login_server.cpp  login_server.h  login_server.vcxproj  login_server.vcxproj.filters  main.cpp
login_server/src/: login_server.cpp  login_server.h
(+11535 files in other folders)
